# dbx-sandbox

./: .env.local.example  .gitignore  .mcp.json  BUNDLE_IMPROVEMENTS.md  CLAUDE.md  QUICKSTART.md  README.md  README_RETAIL_PIPELINE.md  databricks.yml  dbcn_test.py  pyproject.toml
.claude/: settings.local.json
.claude/agents/: spark-expert.md
.claude/skills/databricks-dlt-pipeline/: SKILL.md
.claude/skills/databricks-mcp/: SKILL.md
.cursor/: mcp.json
resources/: my_project.job.yml  my_project.pipeline.yml  retail_data_generator.job.yml  retail_pipeline.pipeline.yml
src/: main.py  notebook.ipynb  pipeline.ipynb  test.ipynb
src/data_generation/: generate_retail_data.py
src/databricks_connect/: __init__.py  dbcn.py  main.py
src/pipelines/: retail_dlt_pipeline.py
tests/: conftest.py  main_test.py
